# MallCustomersApp

./: Entity Relationship Diagram Creator.html  README.md  pyproject.toml
Entity Relationship Diagram Creator_files/: css  pony.css  pony.js.загрузка  vendor.js.загрузка
core/: main.py
core/backend/: __init__.py  constants.py  data_processor_csv.py
core/backend/database/: __init__.py  abstract_sql_connector.py  factory.py  main.py  models_api.py  sql_api.py  sql_connectors.py  table_mall_customers.py
core/backend/models/: __init__.py  factory.py  table_mall_customers.py
core/routers/: __init__.py  crud.py  info.py
