[tool.poetry]
name = "mallcustomersapp"
version = "0.1.0"
description = ""
authors = ["GutesTod"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pandas = "^2.1.2"
python-dotenv = "^1.0.0"
psycopg2-binary = {version = "^2.9.9", extras = ["postgres"]}
pymysql = {version = "^1.1.0", extras = ["mysql"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
